# nova

./: .coverage  .gitignore  .pdm-python  Dockerfile.neo4j  Dockerfile.qdrant  README.md  apoc.conf  config.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  recover_svelte.sh  setup.py  tasks.md  test_celery.py  test_gradio.py  test_launch.py  test_serialization.py  test_ui.py  ui-ux.md
docs/: API Reference Guide.md  Agent Reference Guide.md  Agents and UI-UX.md  CLEANUP.md  DEVLOG.md  Documentation Alignment.md  Documentation Guide.md  Frontend Reference Guide.md  IMPLEMENTATION.md  Integration Patterns and User Flows.md  README.md  Schema Debug Guide.md  Swarm Architectures Updated.md  Swarm Architectures.md  System Architecture and Implementation.md  Testing Guide.md  UI Component Implementation Status.md  WebSocket Guide.md  api-endpoints.md  appendix.md  architecture-1.md  architecture-2.md  architecture-3.md  architecture-clarification.md  codingassistant.md  cotproposal.md  emergent-task-design-2.md  emergent_task_output.md  feasibilityagent.md  graph panel clarificatio.md  initialization.md  initialization_user.md  memora-template.md  memora-template.py  memory-testing-notes.md  memory_confirmation.md  model-selection.md  modelselectionagent.md  outlines.md  prompt caching.md  (+7 more)
docs/devlog/: 2023-12-20.md  2023-12-21.md  2023-12-22.md  2023-12-26.md  2023-12-28.md  2024-12-16.md  2024-12-17.md  2024-12-18.md  2024-12-20.md  2024-12-21.md  2024-12-22.md  2024-12-23.md  2024-12-26.md  2024-12-27.md  2024-12-28.md  2024-12-29.md  2024-12-30.md  2025-01-02.md  2025-01-03.md  2025-01-04.md  2025-01-05.md  2025-01-06.md  2025-01-07.md  2025-01-08.md  2025-01-09.md  2025-01-10.md  2025-01-11.md  2025-01-12.md  2025-01-13.md  2025-01-14.md  2025-01-15.md  2025-01-16.md  2025-01-17.md  2025-01-18.md  2025-01-19.md  2025-01-20.md  2025-01-21.md  2025-01-22.md  README.md  codingassistant.md
examples/: interactive_memory_system.py  test_dag.py  test_memory_dag.py  test_neo4j_memory.py
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: Websocket Guide.md  agent-messaging.test.ts  llm-integration.test.ts  task-management.test.ts  websocket-auth.test.ts  websocket-celery.test.ts  websocket-direct-message.test.ts  websocket-endpoints.test.ts  websocket-flow.test.ts  websocket-llm.test.ts  websocket-validation.test.ts
frontend/playwright-report/: index.html
frontend/src/: app.css
models/: README.md
notebooks/: agent_testing.ipynb
notebooks/.ipynb_checkpoints/: validation_agent_testing-checkpoint.ipynb
performance_results/run_20250107_100444/: report.html  summary.json
performance_results/run_20250107_100633/: report.html  summary.json
performance_results/run_20250107_100810/: raw_results.json  report.html  summary.json
performance_results/run_20250107_100956/: report.html  summary.json
performance_results/run_20250107_101210/: report.html  summary.json
scripts/: README.md  __init__.py  clear_neo4j.py  demo.py  init_neo4j.py  initialize_agents.py  initialize_graph.py  initialize_knowledge.py  initialize_memory.py  inspect_episodic.py  manage.py  run_server.py  run_tests.sh  setup.py  test_agent_storage.py  test_api.py  test_llm_integration.py  test_lmstudio.sh  test_memory_llm_integration.py  test_neo4j.py  test_thread.py  test_thread_storage.py  test_websocket.py  test_ws_auth.py
scripts/chat/: __init__.py  initialize_chat.py
scripts/docker/: docker-compose.yml
scripts/initialization/: __init__.py  all.py  chat.py  initialize.sh  memory.py  tasks.py  users.py  websocket.py
scripts/memory/: __init__.py  initialize_memory.py
scripts/tasks/: __init__.py  initialize_tasks.py
scripts/test/: run_performance_tests.py
scripts/users/: __init__.py  initialize_users.py
scripts/utils/: demo.py  fix_imports.py
scripts/websocket/: __init__.py  initialize_websocket.py
src/: __init__.py  config.ini
src/nia/: __init__.py
test_results/: thread_storage_test_20250113_152948.json  thread_storage_test_20250113_153139.json
test_results/agent_storage_logs/: session_20250113_182211.json  session_20250113_183023.json  session_20250113_183333.json  session_20250113_184853.json  session_20250113_185105.json  session_20250113_185319.json  session_20250113_185422.json  session_20250113_185558.json  session_20250113_185953.json  session_20250113_190205.json  session_20250113_190453.json  session_20250113_190949.json  session_20250113_192549.json  session_20250113_192851.json  session_20250113_193141.json  session_20250113_193313.json  session_20250113_193556.json  session_20250113_193842.json  session_20250113_194034.json  session_20250113_194751.json  session_20250113_195138.json  session_20250113_195611.json  session_20250113_200549.json  test_results_20250113_182225.json  test_results_20250113_183037.json  test_results_20250113_183349.json  test_results_20250113_184906.json  test_results_20250113_185119.json  test_results_20250113_185333.json  test_results_20250113_185436.json  test_results_20250113_185612.json  test_results_20250113_190008.json  test_results_20250113_190220.json  test_results_20250113_190508.json  test_results_20250113_191004.json  test_results_20250113_192604.json  test_results_20250113_192908.json  (+9 more)
tests/: conftest.py  test_basic.py  test_consolidation.py  test_dialogue.py  test_memory.py  test_mobile_chat.py  test_tinytroupe.py  test_tinytroupe_integration.py
(+669 files in other folders)
