[project]
name = "nia"
version = "0.1.0"
description = "Neural Intelligence Architecture"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "neo4j>=5.14.0",           # Neo4j driver for graph database
    "aiohttp>=3.9.1",          # Async HTTP client/server
    "numpy>=1.24.0",           # Numerical computing
    "scikit-learn>=1.3.0",     # Machine learning utilities
    "sentence-transformers>=2.2.2",  # Text embeddings
    "networkx>=3.2.1",         # Network/graph manipulation
    "python-dotenv>=1.0.0",    # Environment variable management
    "pydantic>=2.5.2",         # Data validation
    "colorama>=0.4.6",         # Terminal color support
    "qdrant-client>=1.7.0",    # Vector database client
    "tinytroupe @ file:///Users/alee5331/Documents/Projects/TinyTroupe",  # Local TinyTroupe package
    "docker>=7.1.0",
    "fastapi>=0.115.6",
    "websockets>=14.1",
    "outlines>=0.1.11",
    "transformers>=4.47.1",
    "tenacity>=8.2.3"           # Retry logic with exponential backoff
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pandas>=2.1.4",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
]
lint = [
    "ruff>=0.1.6",
    "black>=23.11.0",
    "mypy>=1.7.1",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=nia --cov-report=term-missing"
