[project]
name = "nia"
version = "0.1.0"
description = "Nova Intelligence Architecture"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.2",
    "neo4j>=4.4.0",
    "qdrant-client>=0.7.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.2",
    "torch>=1.9.0",
    "transformers>=4.9.2",
    "celery>=5.4.0",
    "redis>=4.5.0",
    "aiohttp>=3.8.0",
    "websockets>=10.0",
    "python-multipart>=0.0.5",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=0.19.0"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = "uvicorn src.nia.nova.core.app:app --reload"
test = "pytest"
lint = "black src tests && isort src tests && flake8 src tests"
celery = "celery -A src.nia.nova.core.celery_app worker --loglevel=info"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=6.2.5",
    "pytest-asyncio>=0.15.1",
    "pytest-cov>=2.12.1",
    "pytest-mock>=3.6.1",
    "httpx>=0.18.2",
    "asgi-lifespan>=1.0.1"
]
lint = [
    "black>=21.7b0",
    "isort>=5.9.3",
    "flake8>=3.9.2",
    "mypy>=0.910"
]
doc = [
    "sphinx>=4.1.2",
    "sphinx-rtd-theme>=0.5.2"
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=nia --cov-report=term-missing"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
